[gd_scene load_steps=5 format=3 uid="uid://pr2aeibdrcfg"]

[ext_resource type="Texture2D" uid="uid://s311y6s2u0oq" path="res://art/level_assets/test_background.png" id="1_1ub42"]
[ext_resource type="PackedScene" uid="uid://dlr5p5t4s818b" path="res://scenes/car.tscn" id="1_cbkxy"]
[ext_resource type="Script" path="res://scripts/test_split_screen.gd" id="1_x55ur"]
[ext_resource type="PackedScene" uid="uid://uf2yhcgm7iak" path="res://scenes/camera_split.tscn" id="2_gdc5l"]

[node name="split_screen" type="Node2D"]
script = ExtResource("1_x55ur")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 512.0
offset_bottom = 518.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 540)
render_target_update_mode = 4

[node name="Level" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport"]

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Level"]
texture = ExtResource("1_1ub42")

[node name="Player1" parent="VBoxContainer/SubViewportContainer/SubViewport/Level" instance=ExtResource("1_cbkxy")]

[node name="Player2" parent="VBoxContainer/SubViewportContainer/SubViewport/Level" instance=ExtResource("1_cbkxy")]

[node name="Camera2D" parent="VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("2_gdc5l")]
position = Vector2(0, -542)

[node name="SubViewportContainer2" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer2"]
handle_input_locally = false
size = Vector2i(1920, 540)
render_target_update_mode = 4

[node name="Camera2D2" parent="VBoxContainer/SubViewportContainer2/SubViewport" instance=ExtResource("2_gdc5l")]
